--- a/Joseph/josfuncion.html
+++ b/Joseph/josfuncion.html
@@ -11,7 +11,7 @@
         <h1>Funciones del Lenguaje</h1>
         <h3>Metalingüistica</h3>
         <p><h4>¿Qué es la Metalingüistica?</h4><br>
-            Reflexión sobre el lenguaje mismo. Conciencia y análisis. <br>
+            Reflexión sobre el lenguaje mismo. Conciencia y análisis <br>
             <h4>Componentes claves</h4>
             <p><ul>
                 <li>Semántica</li>
