--- a/MAIN/index.html
+++ b/MAIN/index.html
@@ -9,7 +9,10 @@
 <body>
     <header>
         <h1>Talleres de Comunicación</h1>
-        <p>Aquí exploraremos los talleres que tuvimos en la competencia de comunicación.</p>
+        <p>📚 Bienvenido a un viaje por el fascinante mundo de la comunicación y la comprensión lectora 🌟
+            En esta página descubrirás cómo nos expresamos, más allá de las palabras. Desde una emotiva reflexión sobre "La Sapa Caramelo", hasta los distintos tipos de comunicación, exploraremos juntos cómo el lenguaje da forma a nuestras ideas, emociones y relaciones.
+            ¿Sabías que muchas veces comunicamos más con gestos que con palabras? Acompañanos a descubrirlo, mientras fortalecés tu habilidad para leer entre líneas y comprender profundamente lo que leés.
+            ¡Entrá y dejate sorprender por lo que tu forma de comunicar dice de vos!</p>
     </header>
     <main>
         <section id="integrante-1">
