--- a/Miguel/mignoverb.html
+++ b/Miguel/mignoverb.html
@@ -16,12 +16,12 @@
 
             <h4>Características del paralenguaje </h4>
             <ul>
-                <li>Entonación.</li> 
-                <li>Volumen.</li>
-                <li>Ritmo.</li>
-                <li>Pausas y silencios.</li>
-                <li>Acentuación.</li>
-                <li>Sonidos vocales.</li>
+                <li>Entonación</li> 
+                <li>Volumen</li>
+                <li>Ritmo</li>
+                <li>Pausas y silencios</li>
+                <li>Acentuación</li>
+                <li>Sonidos vocales</li>
             </ul>
             <h4>¿Qué importancia tiene el paralenguaje? </h4>
 
