--- a/Joseph/josnoverb.html
+++ b/Joseph/josnoverb.html
@@ -16,35 +16,35 @@
 
             <h4>Características del paralenguaje </h4>
             <ul>
-                <li>Entonación.</li> 
-                <li>Volumen.</li>
-                <li>Ritmo.</li>
-                <li>Pausas y silencios.</li>
-                <li>Acentuación.</li>
-                <li>Sonidos vocales.</li>
+                <li>Entonación</li> 
+                <li>Volumen</li>
+                <li>Ritmo</li>
+                <li>Pausas y silencios</li>
+                <li>Acentuación</li>
+                <li>Sonidos vocales</li>
             </ul>
             <h4>¿Qué importancia tiene el paralenguaje? </h4>
 
             <p>El paralenguaje nos es esencial en la comunicación porque añade emociones y significados que nos ayudan a que la comunicación sea mucho más llevadera. Sin esto, las conversaciones serian difíciles de interpretar o demasiado secas. </p>
             <p>Algunos datos importantes son: </p> 
             <ul>
-                <li>Expresar sentimientos.</li>
-                <li>Mejor capacidad de interpretación de mensajes.</li>
-                <li>Facilitar la interacción comunicativa.</li>
+                <li>Expresar sentimientos</li>
+                <li>Mejor capacidad de interpretación de mensajes</li>
+                <li>Facilitar la interacción comunicativa</li>
             </ul>
 
             <h4>Tipos de Paralenguaje</h4>
 
             <h5>Paralenguaje Audible:</h5> 
-            <p>Se basa en todo lo que tiene que ver con los elementos sonoros en la comunicación. </p>
+            <p>Se basa en todo lo que tiene que ver con los elementos sonoros en la comunicación </p>
 
             <h5>Paralenguaje Visual:</h5> 
-            <p>Es el lenguaje corporal que tenemos mientras estamos en una conversación. </p>
+            <p>Es el lenguaje corporal que tenemos mientras estamos en una conversación </p>
 
             <h4>Conclusión </h4>
 
             <p>El paralenguaje es muy importante para una comunicación efectiva porque no se centra únicamente en las palabras, y nos ayuda a transmitir de manera profunda nuestras emociones e intenciones.
-            Utilizarlo correctamente mejorará nuestra comunicación y manera de expresarnos con quien nos relacionamos. </p>
+            Utilizarlo correctamente mejorará nuestra comunicación y manera de expresarnos con quien nos relacionamos </p>
         </p>
             <div id="volver-inicio"> <br> <br>
                 <a href="/Joseph/joseph.html">Volver a Talleres de Joseph</a>
